--- a/src/components/residencial/styles.css
+++ b/src/components/residencial/styles.css
@@ -1,4 +1,37 @@
 #subResidencial {
     background: url("../../assets/fundo_casa2.png") no-repeat center;
-    height: 70vh;
+    height: 500px;
+    text-align: center;
 }
+
+.subBotoes {
+    display: flex;
+    justify-content: space-around;
+}
+
+.subtitulo {
+    margin-top: 30px;
+}
+
+.subCategorias {
+    height: 140px;
+    width: 180px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border: 0px;
+    color: var(--cor-principal);
+    font-size: 16px;
+    font-weight: bold;
+    background-color: #FFF;
+    margin-bottom: 100px;
+}
+
+.subCategorias:hover {
+    background-color: var(--cor-hover);
+    transition: 0.5s;
+}
+
+h1 {
+    margin-top: -90px;
+    text-align: center;
+}
+
