--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,8 @@ body {
     max-width: 1200px;
     min-width: 600px;
     margin: 0 auto;
+    display: flex;
+    flex-direction: column;
     background-color: rgba(0, 0, 0, 0.05);
 }
 
@@ -26,7 +28,7 @@ p {
     color: var(--cor-principal);
 }
 
-#cabecalho {
-    height: 200px;
-    margin-top: -50px;
+#root {
+    min-height: 100vh;
+    
 }
