--- a/src/pages/Residencial/styles.css
+++ b/src/pages/Residencial/styles.css
@@ -1,7 +1,11 @@
 #subResidencial {
     background: url("../../assets/fundo_casa2.png") no-repeat center;
-    height: 500px;
+    min-height: 500px;
     text-align: center;
+}
+
+#subResidencial h1 {
+    margin-top: -100px;
 }
 
 .subBotoes {
@@ -29,9 +33,3 @@
     background-color: var(--cor-hover);
     transition: 0.5s;
 }
-
-h1 {
-    margin-top: -90px;
-    text-align: center;
-}
-
