--- a/src/pages/Listagem/styles.css
+++ b/src/pages/Listagem/styles.css
@@ -1,9 +1,86 @@
-main {
+#pagLista main {
+    max-height: 100vh;
     max-width: 1200px;
     min-width: 400px;
-    display: flex;
-    flex: 1;
-    justify-content: space-around;
-    margin-top: -70px;
+    margin-top: -100px;
+    text-align: center;
 }
 
+#pagLista h1 {
+    margin-top: -70px;
+    text-align: center;
+}
+
+#pagLista #conteudo {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 40px;
+    flex-wrap: wrap;
+}
+
+#pagLista .profissionais {
+    width: 280px;
+    height: 150px;
+    box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.25);
+    border: 0px;
+    color: var(--cor-principal);
+    font-size: 16px;
+    font-weight: bold;
+    background-color: #FFF;
+    margin-bottom: 60px;
+}
+
+#pagLista footer {
+    display: flex;
+    flex: 1;
+    justify-content: center;
+}
+
+#pagLista footer p {
+    margin: 5px 20px;
+    color: black;
+}
+
+#pagLista footer a {
+    width: 100%;
+    max-width: 150px;
+    height: 30px;
+    background: var(--cor-botao);
+    color: #fff;
+    border-radius: 3px;
+    border: 0;
+    font-size: 16px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    overflow: hidden;
+}
+
+#pagLista footer a span {
+    width: 30px;
+    height: 30px;
+    border-radius: 3px 0px 0px 3px;
+    background-color: var(--cor-principal);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#pagLista footer span svg {
+    width: 20px;
+    height: 20px;
+}
+
+#pagLista footer a:hover {
+    background-color: var(--cor-principal);
+    transition: 0.8s;
+}
+
+.direita {
+    padding-left: 1%;
+}
+
+.esquerda {
+    padding-right: 1%;
+}
