--- a/src/components/Cabecalho/styles.css
+++ b/src/components/Cabecalho/styles.css
@@ -1,5 +1,12 @@
-#cabecalho {
-    margin-top: 20px;
-    max-width: 120px;
-    margin-bottom: 60px;
+header {
+    margin: 20px 0;
+    max-height: 50px;
+    display: flex;
+    justify-content: space-between;
+}
+
+@media(max-width: 650px){
+    header {   
+        margin-left: 35%;
+    }
 }
