--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -1,7 +1,6 @@
 
 #bg {
     background: url("../../assets/fundo1.png") no-repeat center;
-    margin-top: -70px;
 }
 
 #conteudo {
@@ -9,20 +8,30 @@
     justify-content: space-around;
 }
 
+.pesquisa {
+    text-align: end;
+}
+
 #info {
     max-width: 460px;
 }
 
-#categorias {
-    max-width: 500px;
-    display: flex;
-    justify-content: space-around;
-    flex: 1;
-    flex-wrap: wrap;
-    margin-left: 30px;
+#info .titulo {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 36px;
+    text-align: left;
 }
 
-.botoes {
+#info .subtitulo {
+    font-size: 20px;
+    line-height: 23px;
+    font-weight: bold;
+    text-align: left;
+    margin-top: 80px;
+}
+
+#info .botoes {
     width: 100%;
     max-width: 275px;
     height: 50px;
@@ -37,7 +46,7 @@
     margin-bottom: 30px;
 }
 
-.botoes span {
+#info .botoes span {
     display: block;
     background: var(--cor-principal);
     width: 50px;
@@ -51,43 +60,34 @@
     transition: background-color 0.2s;
 }
 
-.botoes span svg {
+#info .botoes span svg {
     color: #FFF;
     width: 20px;
     height: 20px;
 }
 
-.botoes strong {
+#info .botoes strong {
     flex: 1;
     text-align: center;
     color: #FFF;
     font-size: 28px;
 }
 
-.botoes:hover {
+#info .botoes:hover {
     background: var(--cor-principal);
     transition: background-color 0.5s;
 }
 
-.pesquisa {
-    text-align: end;
+#categorias {
+    max-width: 500px;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    margin-left: 30px;
+    margin-top: 10px;
 }
 
-.titulo {
-    font-style: normal;
-    font-weight: bold;
-    font-size: 36px;
-    text-align: left;
-}
-
-.subtitulo {
-    font-size: 20px;
-    line-height: 23px;
-    font-weight: bold;
-    text-align: left;
-}
-
-.buttonCat {
+#categorias .buttonCat {
     display: block;
     text-align: center;    
     max-width: 130px;
@@ -100,15 +100,92 @@
     background-color: #FFF;
     margin-top: 30px;
     margin-bottom: 80px;
+    margin-left: 30px;
 }
 
-.buttonCat img {
+#categorias .buttonCat img {
     width: 120px;
     margin-top: 5px;
     margin-bottom: 5px;
 }
 
-.buttonCat:hover {
+#categorias .buttonCat:hover {
     background-color: var(--cor-hover);
     transition: 0.5s;
+}
+
+@media(max-width: 950px) {
+    #conteudo {
+        margin-left: 2%;
+    }
+    
+    #categorias {
+        margin-left: 20px;
+    }
+
+    .pesquisa {
+        text-align: center;
+    }
+
+    #categorias .buttonCat {
+        width: 100px;
+        height: 100px;
+        margin-top: 30px;
+        margin-bottom: 80px;
+    }
+    
+    #categorias .buttonCat img {
+        width: 90px;
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
+}
+
+@media(max-width: 790px) {
+    #conteudo {
+        margin-left: 2%;
+    }
+
+    .titulo {
+        font-size: 32px;
+    }
+
+    .subtitulo {
+        font-size: 18px;
+    }
+
+    #categorias .buttonCat {
+        margin-bottom: 20px;
+        margin-top: 5px;
+    }
+       
+    .botoes {
+        width: 100%;
+        max-width: 250px;
+        height: 50px;
+    }
+
+    .botoes span {
+        display: block;
+        background: var(--cor-principal);
+        width: 50px;
+        height: 50px;
+        border-radius: 3px 0px 0px 3px;
+        margin-left: -6px;
+        
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        transition: background-color 0.2s;
+    }
+
+    .botoes span svg {
+        color: #FFF;
+        width: 20px;
+        height: 20px;
+    }
+
+    .botoes strong {
+        font-size: 24px;
+    }
 }
