--- a/src/pages/Listagem/styles.css
+++ b/src/pages/Listagem/styles.css
@@ -2,12 +2,10 @@
     max-height: 100vh;
     max-width: 1200px;
     min-width: 400px;
-    margin-top: -100px;
     text-align: center;
 }
 
 #pagLista h1 {
-    margin-top: -70px;
     text-align: center;
 }
 
@@ -20,7 +18,7 @@
 
 #pagLista .profissionais {
     width: 280px;
-    height: 150px;
+    height: 180px;
     box-shadow: 0px 3px 5px rgba(0, 0, 0, 0.25);
     border: 0px;
     color: var(--cor-principal);
@@ -75,6 +73,20 @@
 #pagLista footer a:hover {
     background-color: var(--cor-principal);
     transition: 0.8s;
+}
+
+.voltar {
+    text-align: end;
+}
+
+.voltar a {
+    padding: 5px;
+    color: var(--cor-principal);
+}
+
+.voltar a:hover {
+    background-color: var(--cor-hover);
+    color: #FFF;
 }
 
 .direita {
