--- a/src/App.css
+++ b/src/App.css
@@ -3,35 +3,46 @@
     --cor-titulo: #8C0404;
     --cor-botao: #3772A4;
     --cor-hover: #C8D3E2;
+    --cor-background: #f0f0f7;
+    --cor-background-header: #e1e1e7;
+    --cor-branco: #ffffff;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html, body, #root {
+    height: 100vh;
 }
 
 body {
-    -webkit-font-smoothing: antialiased;
-    max-width: 1200px;
-    min-width: 650px;
-    margin: 0 auto;
+    background: var(--cor-background);
+}
+
+#root {
     display: flex;
-    flex-direction: column;
-    background-color: rgba(0, 0, 0, 0.05);
+    align-items: center;
+    justify-content: center;
 }
 
-body, input, button, p {
-    font-family: Roboto, Arial, Helvetica, sans-serif;
-}
-
-h1, h2, h3, h4, h5, h6 {
-    font-family: Ubuntu;
-    color: var(--cor-titulo);
-}
-
-p {
-    color: var(--cor-principal);
+body, input, button, textarea {
+    font: 500 1.2rem Roboto;
+    color: var(--cor-botao);
 }
 
 a {
     text-decoration: none;
 }
 
-#root {
-    min-height: 100vh;   
+.container {
+    width: 100vw;
+}
+
+@media (min-width: 700px) {
+    :root {
+        font-size: 62.5%;
+    }
 }
