Novos Logos e Layout Home

--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 :root {
-    --cor-principal: #0C406B;
-    --cor-titulo: #8C0404;
-    --cor-botao: #3772A4;
-    --cor-hover: #C8D3E2;
-    --cor-background: #f0f0f7;
+    --cor-principal: #2a2b3d;
+    --cor-titulo: #701e1e;
+    --cor-botao: #457b9d;
+    --cor-hover: #6f8f9b;
+    --cor-background: #f1faee;
     --cor-background-header: #e1e1e7;
     --cor-branco: #ffffff;
 }
