--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 :root {
-    --cor-principal: #2a2b3d;
+    --cor-principal: #0f166d;
     --cor-titulo: #701e1e;
-    --cor-botao: #457b9d;
+    --cor-botao: #4b7f98;
     --cor-hover: #6f8f9b;
     --cor-background: #f1faee;
     --cor-background-header: #e1e1e7;
