--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
     --cor-botao: #4b7f98;
     --cor-hover: #6f8f9b;
     --cor-background: #F8F8FC;
-    --cor-background-header: #e1e1e7;
+    --cor-background-header: #f5f6f7;
     --cor-branco: #ffffff;
 }
 
