--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -62,6 +62,8 @@
     justify-content: flex-start;
     transition: 0.8s;
     border-radius: 0.5rem;
+    line-height: 2.5rem;
+    font-weight: bold;
 }
 
 .botoes-container a:first-child {
