--- a/src/components/DadosLista/styles.css
+++ b/src/components/DadosLista/styles.css
@@ -1,14 +1,50 @@
-.dados {
-    margin-left: 2%;
+#box-dados {
+    background: var(--cor-background-header);
+    padding: 0.6rem;
+    margin: 0 0.8rem 1rem 0.2rem;
+    min-width: 13rem;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.3);
 }
 
-.redesSociais {
+#box-dados .dados {
+    margin-bottom: 1.5rem;
+}
+
+#box-dados .dados p {
+    margin-bottom: 0.2rem;
+    font-size: 1rem;
+    color: var(--cor-texto)
+}
+
+#box-dados .dados strong {
+    color: var(--cor-titulo);
+}
+
+#box-dados .redesSociais {
     display: flex;
     justify-content: space-around;
-    margin: 2%;
+    margin-top: 0.8rem;
 }
 
-.redesSociais img {
-    width: 42px;
-    height: 42px;
+#box-dados .redesSociais img {
+    width: 2.2rem;
+    height: 2.2rem;
+}
+
+@media (min-width: 700px) {
+    #box-dados {
+        width: 28rem;
+        padding: 1.6rem;
+        margin-bottom: 3rem;
+        margin-right: 3.5rem;
+    }
+
+    #box-dados .dados p {
+        font-size: 1.6rem;
+    }
+
+    #box-dados .redesSociais img {
+        width: 3.8rem;
+        height: 3.8rem;
+    }
 }
