--- a/src/components/DadosLista/styles.css
+++ b/src/components/DadosLista/styles.css
@@ -7,7 +7,8 @@
 }
 
 #box-dados .dados {
-    margin-bottom: 1.5rem;
+    margin-bottom: 1.2rem;
+    text-align: initial;
 }
 
 #box-dados .dados p {
