--- a/src/pages/Home/styles.css
+++ b/src/pages/Home/styles.css
@@ -13,7 +13,7 @@
 }
 
 .logo-container img {
-    width: 18rem;
+    width: 15rem;
     margin-left: 1.2rem;
     margin-top: 0.5rem;
 }
@@ -44,7 +44,8 @@
 }
 
 .back-img {
-    width: 100%;
+    width: 90%;
+    margin-bottom: 1.2rem;
 }
 
 .botoes-container {
