--- a/src/components/CampoTexto/styles.css
+++ b/src/components/CampoTexto/styles.css
@@ -10,7 +10,7 @@
     outline: none;
     font-size: 1rem;
     padding: 0.8rem;
-    border: 1px solid var(--cor-hover);
+    border: 1px solid var(--cor-texto);
     border-radius: 0.3rem;
     transition: all 0.2s linear;
     -webkit-transition: all 0.2s linear;
