--- a/src/pages/Listagem/styles.css
+++ b/src/pages/Listagem/styles.css
@@ -47,7 +47,7 @@
     outline: none;
     font-size: 1rem;
     padding: 0.4rem 0.1rem;
-    border: 1px solid var(--cor-hover);
+    border: 1px solid var(--cor-texto);
     color: var(--cor-texto);
     border-radius: 0.3rem;
     background-color: var(--cor-background-header);
@@ -65,17 +65,13 @@
     width: 29.5rem;
 }
 
-#page-list .select-block select:hover {
-    border-color: var(--cor-principal);
-}
-
 #page-list .select-block option {
     color: var(--cor-texto);
 }
 
 #page-list hr {
 	height: 1px;
-    border-color: var(--cor-botao);
+    border-color: var(--cor-texto);
     border-top: 0;
     margin-bottom: 1.3rem;
 }
@@ -100,19 +96,18 @@
 
 #page-list footer a {
   padding: 0.4rem 0.6rem;
-  background: var(--cor-botao);
+  background: var(--cor-texto);
   display: flex;
   justify-content: space-between;
   align-items: center;
   color: var(--cor-branco);
   font-weight: 700;
-  transition: background-color 0.4s;
+  transition: opacity 0.4s;
   border-radius: 0.3rem;
 }
 
 #page-list footer a:hover {
-    background-color: var(--cor-hover);
-    color: var(--cor-principal);
+    opacity: 0.6;
   }
 
 #page-list footer svg {
