--- a/src/pages/SaberMais/styles.css
+++ b/src/pages/SaberMais/styles.css
@@ -27,7 +27,7 @@
 }
 
 #page-info .button-cad a {
-    background: var(--cor-botao);
+    background: var(--cor-principal);
     height: 2.8rem;
     color: var(--cor-branco);
     width: 100%;
@@ -39,10 +39,11 @@
     line-height: 2.5rem;
     font-weight: bold;
     margin-bottom: 2.3rem;
+    transition: opacity 0.2s;
 }
 
 #page-info .button-cad a:hover {
-    background: var(--cor-hover);
+    opacity: 0.6;
 }
 
 #page-info main footer {
@@ -55,4 +56,33 @@
 
 #page-info main footer a:hover {
     color: var(--cor-texto);
+}
+
+@media (min-width: 700px) {
+    #page-info main {
+        background: url('../../assets/monitor.svg') no-repeat 75rem top;
+        background-size: 45rem;
+        padding: 2.5rem 6.5rem;
+        margin-left: 3.8rem;
+    }
+
+    #page-info main h4 {
+        margin: 0;
+        max-width: 60rem;
+        font-size: 2.4rem;
+    }
+
+    #page-info main .beneficios {
+        font-size: 2rem;
+        margin: 4rem 0 5rem 5rem;
+    }
+
+    #page-info .button-cad a {
+        width: 50%;
+        height: 5rem;
+        font-size: 1.8rem;
+    }
+    #page-info main footer {
+        font-size: 1.2rem;
+    }
 }
